Added name and program details to final notebook

--- a/student.ipynb
+++ b/student.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "eb7d51e6",
+   "metadata": {},
+   "source": [
+    "# Project Title: Aviation Safety Analysis\n",
+    "**Name**: Abigael Nzivu Musyoka  \n",
+    "**Program**: Data Science Part-Time Evening Programme \n",
+    "**Institution**: Moringa School Class of 2025  \n",
+    "**Date**: 27th July 2025\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e96d611e",
    "metadata": {},
    "source": [
